<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_dropdown"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_options"
        android:layout_width="147dp"
        android:layout_height="150dp"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/container_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/opt_1"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/one"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/opt_2"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/two"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/opt_3"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/three"
                android:textSize="12sp"
                android:textColor="@color/purple_100" />

            <TextView
                android:id="@+id/opt_4"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/four"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/opt_5"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/five"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/opt_6"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/six"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/opt_7"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/seven"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/opt_8"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/eight"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/opt_9"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/nine"
                android:textSize="12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/opt_10"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/ten"
                android:textSize="12sp"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</com.google.android.material.card.MaterialCardView>